--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "engines": {
     "vscode": "^1.77.0"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rochekollie/darksome"},
   "categories": [
     "Themes"
   ],
