--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "author": "Roche Kollie",
   "publisher": "rochekollie",
   "displayName": "Darksome",
-  "description": "Darksome is a sleek and visually stunning dark and awesome theme that provides an exceptional programming experience. The deep, rich hues of black, gray, and blue are perfectly balanced to create a comfortable and enjoyable atmosphere for coding. The text is clear and easy to read, and the syntax highlighting makes it effortless to navigate through your code. With Darksome, you'll find yourself effortlessly losing track of time as you immerse yourself in the world of programming. Whether you're working on a personal project or collaborating with a team, this dark and awesome color scheme will undoubtedly elevate your coding game to new heights.",
+  "description": "Darksome is dark and awesome—a visually stunning theme perfectly balanced for an enjoyable coding experience.",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.77.0"
