--- a/samples/package.json
+++ b/samples/package.json
@@ -3,8 +3,8 @@
   "author": "Roche Kollie",
   "publisher": "rochekollie",
   "displayName": "Darksome",
-  "description": "Darksome is dark and awesome—a visually stunning theme perfectly balanced for an enjoyable coding experience.",
-  "version": "0.0.3",
+  "description": "A visually stunning dark theme for an immersive and productive coding experience.",
+  "version": "0.1.4",
   "engines": {
     "vscode": "^1.77.0"
   },
@@ -13,12 +13,13 @@
     "url": "https://github.com/rochekollie/darksome"
   },
   "license": "MIT",
-  "icon": "icon.png",
+  "icon": "./assets/icons/darksome-icon-v3.png",
   "keywords": [
-    "themes",
-    "dark",
-    "awesome",
-    "darksome"
+    "dark theme",
+    "dark color theme",
+    "darksome",
+    "darksome theme",
+    "roche kollie"
   ],
   "categories": [
     "Themes"
@@ -31,8 +32,5 @@
         "path": "./themes/Darksome-color-theme.json"
       }
     ]
-  },
-  "bugs": {
-    "url": "https://github.com/rochekollie/darksome/issues"
   }
 }
